added aidoc project

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -38,6 +38,20 @@
     ]
   },
   {
+    "name": "AI-Doc",
+    "image": "images/projects/aidoc.png",
+    "link": "https://github.com/daniel-idowu-01/AI-Doc",
+    "liveLink": "https://ai-doc.netlify.app/home",
+    "about": "AI Doc - An AI-powered symptom and diagnosis guidance web application that helps users manage their health.",
+    "builtWith": [
+      "react",
+      "expressjs",
+      "tailwindcss",
+      "machine learning",
+      "mongodb"
+    ]
+  },
+  {
     "name": "Exclusive",
     "image": "images/projects/exclusive.png",
     "link": "https://github.com/daniel-idowu-01/exclusive",
